syntax = "proto3";

option java_package = "dev.dwidi.springbootreactivegrpc";
option java_outer_classname = "UserServiceProto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUserRequest {
  int32 user_id = 1;
}

message GetUserResponse {
  int32 user_id = 1;
  string full_name = 2;
  string username = 3;
  string email = 4;
}

message CreateUserRequest {
  string full_name = 1;
  string username = 2;
  string email = 3;
}

message CreateUserResponse {
  int32 user_id = 1;
  string full_name = 2;
  string username = 3;
  string email = 4;
}

message UpdateUserRequest {
  int32 user_id = 1;
  string full_name = 2;
  string username = 3;
  string email = 4;
}

message UpdateUserResponse {
  int32 user_id = 1;
  string full_name = 2;
  string username = 3;
  string email = 4;
}

message DeleteUserRequest {
  int32 user_id = 1;
}

message DeleteUserResponse {
  int32 user_id = 1;
}